# RAG-lab-DE24-john-sandsjo

./: .gitignore  README.md  TODO.txt  api.py  app.py  constants.py  data_models.py  data_preperations.py  dockerfile  function_app.py  host.json  ingestion.py  pyproject.toml  rag.py  rag_agent.py  requirements.txt
explorations/: data_prep.ipynb  demo_endpoints.ipynb  explore_data.ipynb  improved_youtube_data.ipynb
frontend/: app.py
